9. Measuring the Spam Filter's Accuracy

--- a/Building-a-spam-filter-with-naive-bayes/basic.ipynb
+++ b/Building-a-spam-filter-with-naive-bayes/basic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "93deb4b6",
+   "id": "e9d35918",
    "metadata": {},
    "source": [
     "# Building a Spam Filter with Naive Bayes\n",
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ba1b4d1c",
+   "id": "2fae1f14",
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b99a3e77",
+   "id": "66fc0c21",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "009a83d3",
+   "id": "3be0dbce",
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93d0e814",
+   "id": "f7a784ee",
    "metadata": {},
    "source": [
     "## Training and Test Set\n",
@@ -165,7 +165,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "18422730",
+   "id": "782546bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1c14d52f",
+   "id": "60e98cca",
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "5a477b0f",
+   "id": "11d8b777",
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "086041b0",
+   "id": "86345df0",
    "metadata": {},
    "source": [
     "We can see that the two datasets we extracted have approximately the same proportion of spam and non-spam messages as the original dataset."
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e754cd6b",
+   "id": "242715ba",
    "metadata": {},
    "source": [
     "## Letter Case and Punctuation"
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb792f0d",
+   "id": "a6f3b575",
    "metadata": {},
    "source": [
     "To calculate all the probabilities, we'll first need to perform a bit of data cleaning to bring the data in a format that will allow us to extract easily all the information we need. \n",
@@ -254,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f23cfe06",
+   "id": "18a4a851",
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c4cafe1",
+   "id": "0ed3c608",
    "metadata": {},
    "source": [
     "## Creating the Vocabulary\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7817d3a1",
+   "id": "8f429491",
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2292b7d",
+   "id": "d3df3df0",
    "metadata": {},
    "source": [
     "## The Final Training Set"
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0efc6f5",
+   "id": "7573474b",
    "metadata": {},
    "source": [
     "Now we're going to use the vocabulary to make the data transformation we need:\n",
@@ -392,7 +392,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "480909a4",
+   "id": "d95ae1f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ef08c207",
+   "id": "43a03eb3",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f28811ff",
+   "id": "afa227ca",
    "metadata": {},
    "outputs": [
     {
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "052922d9",
+   "id": "d9450785",
    "metadata": {},
    "source": [
     "## Calculating Constants First\n",
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77eb357c",
+   "id": "d0cfcb71",
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
@@ -1008,7 +1008,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50640581",
+   "id": "eaa2fe88",
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
@@ -1018,7 +1018,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31245ba4",
+   "id": "d853d917",
    "metadata": {},
    "source": [
     "Also, to calculate P(wi|Spam) and P(wi|Ham) inside the formulas above, recall that we need to use these equations:"
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5fe6511",
+   "id": "d48fcb40",
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "41c5c666",
+   "id": "b6d6aa76",
    "metadata": {},
    "source": [
     "\\begin{equation}\n",
@@ -1046,7 +1046,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e02bca2",
+   "id": "57215f30",
    "metadata": {},
    "source": [
     "Some of the terms in the four equations above will have the same value for every new message. As a start, let's first calculate:\n",
@@ -1058,7 +1058,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f2c1e638",
+   "id": "8ff375de",
    "metadata": {},
    "outputs": [
     {
@@ -1102,7 +1102,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "d3701525",
+   "id": "8d5917d6",
    "metadata": {},
    "outputs": [
     {
@@ -1124,7 +1124,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "afa37803",
+   "id": "fefd4856",
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1146,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fae5d06f",
+   "id": "50dba1ee",
    "metadata": {},
    "outputs": [
     {
@@ -1169,7 +1169,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "88c0ba2a",
+   "id": "9b1adb8e",
    "metadata": {},
    "outputs": [
     {
@@ -1192,7 +1192,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "84a1ed1e",
+   "id": "1eacd867",
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "79161f46",
+   "id": "e76f840a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89427dd0",
+   "id": "478ef802",
    "metadata": {},
    "source": [
     "## Calculating Parameters\n",
@@ -1247,7 +1247,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "d5b72416",
+   "id": "393d198c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1258,7 +1258,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "1fc0c31d",
+   "id": "9663b0d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,16 +1277,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "32ec7517",
+   "id": "5544ee4f",
    "metadata": {},
    "source": [
-    "Now that we've calculated all the constants and parameters we need, we can start creating the spam filter. The spam filter can be understood as a function that:"
+    "## Classifying A New Message\n",
+    "Now that we've calculated all the constants and parameters we need, we can start creating the spam filter. The spam filter can be understood as a function that:\n",
+    "- Takes in as input a new message (w1, w2, ..., wn)\n",
+    "- Calculates P(Spam|w1, w2, ..., wn) and P(Ham|w1, w2, ..., wn)\n",
+    "- Compares the values of P(Spam|w1, w2, ..., wn) and P(Ham|w1, w2, ..., wn), and:\n",
+    "- If P(Ham|w1, w2, ..., wn) > P(Spam|w1, w2, ..., wn), then the message is classified as ham.\n",
+    "- If P(Ham|w1, w2, ..., wn) < P(Spam|w1, w2, ..., wn), then the message is classified as spam.\n",
+    "- If P(Ham|w1, w2, ..., wn) = P(Spam|w1, w2, ..., wn), then the algorithm may request human help."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "9d4e410c",
+   "execution_count": 28,
+   "id": "1206a5e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1299,9 +1306,7 @@
     "    \n",
     "    p_spam_given_message = p_spam\n",
     "    p_ham_given_message = p_ham\n",
-    "    \n",
-    "    print('MESSAGE: ', message, p_spam_given_message, p_ham_given_message)\n",
-    "    \n",
+    "        \n",
     "    for word in message.split():\n",
     "        if word in spam_parameters:\n",
     "            p_spam_given_message*= spam_parameters[word]\n",
@@ -1321,8 +1326,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "c0c50bcd",
+   "execution_count": 29,
+   "id": "06b10636",
    "metadata": {},
    "outputs": [
     {
@@ -1342,8 +1347,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "bf71893a",
+   "execution_count": 30,
+   "id": "526612eb",
    "metadata": {},
    "outputs": [
     {
@@ -1359,6 +1364,229 @@
    ],
    "source": [
     "classify('\"Sounds good, Tom, then see u there\"')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb4106eb",
+   "metadata": {},
+   "source": [
+    "##  Measuring the Spam Filter's Accuracy\n",
+    "\n",
+    "We'll now try to determine how well the spam filter does on our test set of 1,114 messages.\n",
+    "\n",
+    "The algorithm will output a classification label for every message in our test set, which we'll be able to compare with the actual label (given by a human). Note that, in training, our algorithm didn't see these 1,114 messages, so every message in the test set is practically new from the perspective of the algorithm."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7af6054a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def classify_test_set(message:str) -> str:\n",
+    "    message = re.sub('\\W', ' ', message)\n",
+    "    message = message.lower()\n",
+    "    \n",
+    "    p_spam_given_message = p_spam\n",
+    "    p_ham_given_message = p_ham\n",
+    "        \n",
+    "    for word in message.split():\n",
+    "        if word in spam_parameters:\n",
+    "            p_spam_given_message*= spam_parameters[word]\n",
+    "        if word in ham_parameters:\n",
+    "            p_ham_given_message*=ham_parameters[word]\n",
+    "\n",
+    "    if p_ham_given_message > p_spam_given_message:\n",
+    "        return 'ham'\n",
+    "    if p_ham_given_message < p_spam_given_message:\n",
+    "        return 'spam'\n",
+    "    \n",
+    "    return 'needs human classification'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "091b0f28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Label</th>\n",
+       "      <th>SMS</th>\n",
+       "      <th>predicted</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Later i guess. I needa do mcat study too.</td>\n",
+       "      <td>ham</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>But i haf enuff space got like 4 mb...</td>\n",
+       "      <td>ham</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>Had your mobile 10 mths? Update to latest Oran...</td>\n",
+       "      <td>spam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>All sounds good. Fingers . Makes it difficult ...</td>\n",
+       "      <td>ham</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>All done, all handed in. Don't know if mega sh...</td>\n",
+       "      <td>ham</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1109</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>We're all getting worried over here, derek and...</td>\n",
+       "      <td>ham</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1110</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>Oh oh... Den muz change plan liao... Go back h...</td>\n",
+       "      <td>ham</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1111</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>CERI U REBEL! SWEET DREAMZ ME LITTLE BUDDY!! C...</td>\n",
+       "      <td>ham</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1112</th>\n",
+       "      <td>spam</td>\n",
+       "      <td>Text &amp; meet someone sexy today. U can find a d...</td>\n",
+       "      <td>spam</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1113</th>\n",
+       "      <td>ham</td>\n",
+       "      <td>K k:) sms chat with me.</td>\n",
+       "      <td>ham</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1114 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     Label                                                SMS predicted\n",
+       "0      ham          Later i guess. I needa do mcat study too.       ham\n",
+       "1      ham             But i haf enuff space got like 4 mb...       ham\n",
+       "2     spam  Had your mobile 10 mths? Update to latest Oran...      spam\n",
+       "3      ham  All sounds good. Fingers . Makes it difficult ...       ham\n",
+       "4      ham  All done, all handed in. Don't know if mega sh...       ham\n",
+       "...    ...                                                ...       ...\n",
+       "1109   ham  We're all getting worried over here, derek and...       ham\n",
+       "1110   ham  Oh oh... Den muz change plan liao... Go back h...       ham\n",
+       "1111   ham  CERI U REBEL! SWEET DREAMZ ME LITTLE BUDDY!! C...       ham\n",
+       "1112  spam  Text & meet someone sexy today. U can find a d...      spam\n",
+       "1113   ham                            K k:) sms chat with me.       ham\n",
+       "\n",
+       "[1114 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test['predicted'] = test['SMS'].apply(classify_test_set)\n",
+    "test"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5cf56b8f",
+   "metadata": {},
+   "source": [
+    "Now we can compare the predicted values with the actual values to measure how good our spam filter is with classifying new messages. To make the measurement, we'll use accuracy as a metric."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "931464a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1100"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correct = (test['Label'] == test['predicted']).sum()\n",
+    "correct"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a8136f8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9874326750448833"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "accuracy = correct / len(test)\n",
+    "accuracy"
    ]
   }
  ],
